Organizando repositório para c.

--- a/tools/emulator/bgb.ini
+++ b/tools/emulator/bgb.ini
@@ -14,7 +14,7 @@ RecordHalfSpeed=1
 RecordButtonAudio=1
 RecordButtonVideo=1
 RecordButtonChannels=0
-LastRomDir=C:\Users\carlo\Desktop\Periodo 7\IHS\Projeto jogo\build
+LastRomDir=C:\Users\carlo\Desktop\Periodo 7\IHS\Projeto Snake-Corona\build
 RomDir=
 SaveRamDir=
 RecSave=1
@@ -212,10 +212,10 @@ Color12=D0F8E0
 Color13=70C088
 Color14=566834
 Color15=201808
-Recent0=C:\Users\carlo\Desktop\Periodo 7\IHS\Projeto jogo\build\hello-world.gb
-Recent1=
-Recent2=
-Recent3=
+Recent0=C:\Users\carlo\Desktop\Periodo 7\IHS\Projeto Snake-Corona\build\main.gb
+Recent1=C:\Users\carlo\Desktop\Periodo 7\IHS\Projeto Snake-Corona\tools\gbdk\test\demo.gb
+Recent2=C:\Users\carlo\Desktop\Periodo 7\IHS\Projeto Snake-Corona\build\hello-world.gb
+Recent3=C:\Users\carlo\Desktop\Periodo 7\IHS\Projeto jogo\build\hello-world.gb
 Recent4=
 Recent5=
 Recent6=
