--- a/tools/emulator/bgb.ini
+++ b/tools/emulator/bgb.ini
@@ -14,15 +14,15 @@ RecordHalfSpeed=1
 RecordButtonAudio=1
 RecordButtonVideo=1
 RecordButtonChannels=0
-LastRomDir=C:\Users\carlo\Desktop\Periodo 7\IHS\Projeto Snake-Corona\build
+LastRomDir=C:\Users\erick\Desktop\Projeto-IHS\Snake-corona\build
 RomDir=
 SaveRamDir=
 RecSave=1
 RecSaveInterval=600
 Width=320
 Height=288
-WinX=726
-WinY=449
+WinX=746
+WinY=408
 ScreenWidth=1366
 ScreenHeight=768
 PauseOnDefocus=0
@@ -212,12 +212,12 @@ Color12=D0F8E0
 Color13=70C088
 Color14=566834
 Color15=201808
-Recent0=C:\Users\carlo\Desktop\Periodo 7\IHS\Projeto Snake-Corona\build\main.gb
-Recent1=C:\Users\carlo\Desktop\Periodo 7\IHS\Projeto Snake-Corona\tools\gbdk\test\demo.gb
-Recent2=C:\Users\carlo\Desktop\Periodo 7\IHS\Projeto Snake-Corona\build\hello-world.gb
-Recent3=C:\Users\carlo\Desktop\Periodo 7\IHS\Projeto jogo\build\hello-world.gb
-Recent4=
-Recent5=
+Recent0=C:\Users\erick\Desktop\Projeto-IHS\Snake-corona\build\main.gb
+Recent1=C:\Users\erick\Desktop\Projeto-IHS\Snake-corona\tools\emulator\bgbtest.gb
+Recent2=C:\Users\carlo\Desktop\Periodo 7\IHS\Projeto Snake-Corona\build\main.gb
+Recent3=C:\Users\carlo\Desktop\Periodo 7\IHS\Projeto Snake-Corona\tools\gbdk\test\demo.gb
+Recent4=C:\Users\carlo\Desktop\Periodo 7\IHS\Projeto Snake-Corona\build\hello-world.gb
+Recent5=C:\Users\carlo\Desktop\Periodo 7\IHS\Projeto jogo\build\hello-world.gb
 Recent6=
 Recent7=
 Recent8=
