tentando organizar o git_ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
-build/
-bgb.ini
-main.asm
-main.gb
-main.ihx
-main.lst
-main.map
-main.noi
-main.o
-main.sym
+/tools/emulator/bgb.ini
+build/main.asm
+build/main.gb
+build/main.ihx
+build/main.lst
+build/main.map
+build/main.noi
+build/main.o
+build/main.sym
