Mudança no background.

--- a/tools/gbmb/gbmb.ini
+++ b/tools/gbmb/gbmb.ini
@@ -1,5 +1,5 @@
 [General]
 GBRPath=C:\Users\carlo\Desktop\Periodo 7\IHS\Projeto Pong\assets\
-GBMPath=C:\Users\carlo\Desktop\Periodo 7\IHS\Projeto Pong\tools\gbmb\
+GBMPath=c:\users\carlo\desktop\periodo 7\ihs\projeto pong\tools\gbmb\
 [Recently used files]
 F0=c:\users\carlo\desktop\periodo 7\ihs\projeto pong\tools\gbmb\teste.gbm
