Adicionado sistema de score.

--- a/tools/gbtd/gbtd.ini
+++ b/tools/gbtd/gbtd.ini
@@ -1,5 +1,6 @@
 [General]
 GBRPath=C:\Users\carlo\Desktop\Periodo 7\IHS\Projeto Pong\assets\
 [Recently used files]
-F0=c:\users\carlo\desktop\periodo 7\ihs\projeto pong\assets\gray.gbr
-F1=c:\users\carlo\desktop\periodo 7\ihs\projeto pong\assets\map.gbr
+F0=c:\users\carlo\desktop\periodo 7\ihs\projeto pong\assets\score.gbr
+F1=c:\users\carlo\desktop\periodo 7\ihs\projeto pong\assets\gray.gbr
+F2=c:\users\carlo\desktop\periodo 7\ihs\projeto pong\assets\map.gbr
